Edited the contact me page to contain correct URL to the about

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li class="navyblue"><a href="website.html" target="_blank">About Me</a></li>
+                <li class="navyblue"><a href="about-me.html" target="_blank">About Me</a></li>
                 <li class="orange"><a href="#">Contact Me</a></li>
                 <li class="maroon"><a href="registration.html" target="_blank">Registration</a></li>
                 <li class="peach"><a href="loginpage.html" target="_blank">Login</a></li>
